# src/interface/swagger.json
@@ -101,7 +101,7 @@
                     "application/json"
                 ],
                 "deprecated": false,
-                "description": "If the settlementWindow is open, it can be closed and a new window is created. If it is already closed, return an error message. Returns the new settlement window.",
+                "description": "Closes requested window and opens a new one.",
                 "summary": "closeSettlementWindow",
                 "operationId": "closeSettlementWindow",
                 "parameters": [
@@ -392,7 +392,7 @@
                     "application/json"
                 ],
                 "deprecated": false,
-                "description": "Trigger the creation of a settlement, that does the calculation of the net settlement position per participant and marks all transfers in the affected windows as PENDING_SETTLEMENT. Returned dataset is the net settlement report for the settlementWindow",
+                "description": "Triggers settlement creation. Returns settlement report.",
                 "summary": "createSettlement",
                 "operationId": "createSettlement",
                 "parameters": [
@@ -581,7 +581,7 @@
                 }
             }
         },
-        "/settlements/{settlementId}/participants/{participantId}": {
+        "/settlements/{sid}/participants/{pid}": {
             "get": {
                 "produces": [
                     "application/json"
@@ -593,14 +593,14 @@
                 "parameters": [
                     {
                         "in": "path",
-                        "name": "settlementId",
+                        "name": "sid",
                         "required": true,
                         "type": "integer",
                         "description": "A valid Settlement Id.\n"
                     },
                     {
                         "in": "path",
-                        "name": "participantId",
+                        "name": "pid",
                         "required": true,
                         "type": "integer",
                         "description": "A valid Participant Id.\n"
@@ -656,20 +656,20 @@
                     "application/json"
                 ],
                 "deprecated": false,
-                "description": "Acknowledgement of settlement by updating with Settlements Id and Participant Id.",
+                "description": "Acknowledgement of settlement by updating the reason and state by SP.",
                 "summary": "updateSettlementBySettlementParticipant",
                 "operationId": "updateSettlementBySettlementParticipant",
                 "parameters": [
                     {
                         "in": "path",
-                        "name": "settlementId",
+                        "name": "sid",
                         "description": "A valid Settlement Id.",
                         "required": true,
                         "type": "integer"
                     },
                     {
                         "in": "path",
-                        "name": "participantId",
+                        "name": "pid",
                         "description": "A valid Participant Id.",
                         "required": true,
                         "type": "integer"
@@ -727,7 +727,7 @@
                 }
             }
         },
-        "/settlements/{settlementId}/participants/{participantId}/accounts/{accountId}": {
+        "/settlements/{sid}/participants/{pid}/accounts/{aid}": {
             "get": {
                 "produces": [
                     "application/json"
@@ -739,24 +739,24 @@
                 "parameters": [
                     {
                         "in": "path",
-                        "name": "settlementId",
+                        "name": "sid",
                         "required": true,
                         "type": "integer",
                         "description": "A valid Settlement Id.\n"
                     },
                     {
                         "in": "path",
-                        "name": "participantId",
+                        "name": "pid",
                         "required": true,
                         "type": "integer",
                         "description": "A valid Participant Id.\n"
                     },
                     {
                         "in": "path",
-                        "name": "accountId",
+                        "name": "aid",
                         "required": true,
                         "type": "integer",
-                        "description": "A valid Account Id.    \n"
+                        "description": "A valid Account Id.\n"
                     }
                 ],
                 "tags": [
@@ -809,27 +809,27 @@
                     "application/json"
                 ],
                 "deprecated": false,
-                "description": "Acknowledgement of settlement by updating the reason and state by Settlements Id, Participant Id and accounts Id.",
+                "description": "Acknowledgement of settlement by updating the reason and state by SPA.",
                 "summary": "updateSettlementBySettlementParticipantAccount",
                 "operationId": "updateSettlementBySettlementParticipantAccount",
                 "parameters": [
                     {
                         "in": "path",
-                        "name": "settlementId",
+                        "name": "sid",
                         "description": "A valid Settlement Id.",
                         "required": true,
                         "type": "integer"
                     },
                     {
                         "in": "path",
-                        "name": "participantId",
+                        "name": "pid",
                         "description": "A valid Participant Id.",
                         "required": true,
                         "type": "integer"
                     },
                     {
                         "in": "path",
-                        "name": "accountId",
+                        "name": "aid",
                         "description": "A valid Account Id.",
                         "required": true,
                         "type": "integer"
